# shapcpm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/demo/: index.html  styles.css
docs/demo/js/: board.js  main.js  render.js  simulation.js
docs/examples/: wang2024_case1.ipynb
src/shapcpm/: __init__.py  collections.py  cpmnetwork.py  cpmtree.py
tests/: test_collections.py  test_cpmtree.py  test_smoke.py
